<resources>
    <string name="app_name">嗨秀</string>
    <string name="main_back">再按一次返回键退出</string>
    <string name="app_main">首页</string>
    <string name="app_talk">嗨秀</string>
    <string name="app_myself">个人中心</string>
    <string name="more">更多</string>
    <string name="personinfo">个人信息保护指引</string>
    <string name="hint_code">请输入验证码</string>
    <string name="welcome">欢迎来到</string>
    <string name="hint_phonecode">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="pass_details">请输入6-10位数字加字母（区分大小写）</string>
    <string name="nocode">收不到验证码？</string>
    <string name="pass_forget">收不到验证码？</string>
    <string name="set_password_title">请设置你的登录密码</string>
    <string name="back_password_title">密码找回</string>
    <string name="sex">Your gender is？</string>
    <string name="sex_details">性别选定后不可更改</string>
    <string name="userage">Your age is？</string>
    <string name="status_online">在线</string>
    <string name="status_busy">忙碌</string>
    <string name="anchor_block">确定要将对方拉黑?</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="waitforcall">等待对方接受邀请</string>
    <string name="talk_info">通话过程中，严禁任何违反国家法律法规……</string>
    <string name="setting_video">摄像头</string>
    <string name="setting_audio">麦克风</string>
    <string name="setting_trans">前置摄像头</string>
    <string name="setting_report">举报</string>
    <string name="endtalk">通话已结束</string>
    <string name="endtalk_info">通话已结束快来查看奖励吧~</string>
    <string name="complete">完成</string>
    <string name="choosecontain">选择国家或地区</string>
    <string name="serch">搜索</string>
</resources>