<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="153dp"

    >
    
    <RelativeLayout
        android:layout_width="296dp"
        android:layout_height="153dp"
        android:background="@drawable/dialog_white"
        android:layout_centerHorizontal="true"
        >



    <TextView
        android:id="@+id/txt_block_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sure_report"
        android:text="@string/anchor_block"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        />
    
    <TextView
        android:id="@+id/txt_grey_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_block"
        android:layout_below="@+id/txt_block_content"
        android:layout_marginTop="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_grey_line">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/sure_report"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line_block"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/sure"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>